prefere Integer.valueOf()